# binaryninja-api

./: .gitignore  Cargo.toml  README.md  architecture.cpp  basicblock.cpp  binaryninjaapi.h  binaryninjacore.h  binaryview.cpp  datarenderer.cpp  debuginfo.cpp  firmwareninja.cpp  function.cpp  highlevelil.cpp  highlevelilinstruction.h  languagerepresentation.cpp  linearviewobject.cpp  lineformatter.cpp  lowlevelilinstruction.h  mediumlevelilinstruction.h  renderlayer.cpp
.github/workflows/: rust.yml  rust_testing.yml
arch/armv7/: arch_armv7.cpp
arch/mips/: arch_mips.cpp
arch/msp430/: Cargo.toml
arch/powerpc/: arch_ppc.cpp  disassembler.cpp  disassembler.h  il.cpp  test_disasm.cpp
arch/riscv/: Cargo.toml
demangler/gnu3/: demangle_gnu3.cpp
docs/: getting-started.md
docs/about/: open-source.md
docs/dev/: annotation.md  batch.md  concepts.md  workflows.md
docs/guide/: index.md  settings.md
examples/triage/: fileinfo.cpp
formatter/generic/: genericformatter.cpp
lang/c/: pseudoc.cpp  pseudoc.h
lang/rust/: pseudorust.cpp  pseudorust.h
plugins/idb_import/: CMakeLists.txt  Cargo.toml
plugins/idb_import/src/: lib.rs  types.rs
plugins/msvc_rtti/: plugin.cpp  rtti.cpp  rtti.h
python/: __init__.py  binaryview.py  datarender.py  firmwareninja.py  function.py  highlevelil.py  languagerepresentation.py  lowlevelil.py  mediumlevelil.py  plugin.py  renderlayer.py  typelibrary.py  variable.py  workflow.py
rust/: CMakeLists.txt  Cargo.toml  README.md
ui/: commands.h  featuremap.h  flowgraphwidget.h  linearview.h  memorymap.h  taglist.h  viewframe.h
(+141 files in other folders)
