# This is the workspace for all rust projects in binaryninja-api
# This is not a part of the build process, rather a way to link all rust code together so that external
# contributors have a map of all rust code. The main benefit to providing this workspace is tooling, as cloning
# binaryninja-api will result in this root workspace being picked up and used for LSP and cargo commands automatically.
[workspace]
resolver = "2"
members = [
    "rust",
    "arch/riscv",
    "arch/msp430",
    "view/bintxt",
    "view/minidump",
    "plugins/dwarf/dwarf_import",
    "plugins/dwarf/dwarf_export",
    "plugins/dwarf/dwarfdump",
    "plugins/dwarf/shared",
    "plugins/idb_import",
    "plugins/pdb-ng",
    "plugins/warp"
]

[workspace.dependencies]
binaryninja = { path = "rust" }
binaryninjacore-sys = { path = "rust/binaryninjacore-sys" }

[profile.release]
lto = true
debug = "full"
